Fixed mobile annotator window being half off the screen on iPhone 5.

--- a/sites/all/themes/lacuna_stories/sass/components/annotator-touch.scss
+++ b/sites/all/themes/lacuna_stories/sass/components/annotator-touch.scss
@@ -4,7 +4,7 @@
 /*  For tabbed annotation editor  */
 
 .annotator-touch-editor.tab-out .annotator-touch-widget {
-    left: calc(100% - 370px);
+    left: 0px;
     top: 10px;
 }
 
